Createtest och previewtest är klara

--- a/src/testverktygfrontend/createTest/FXMLCreateTest.fxml
+++ b/src/testverktygfrontend/createTest/FXMLCreateTest.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="622.0" prefWidth="1103.0" style="-fx-background-color: linear-gradient(to bottom, #ff7f50, #10374b);" stylesheets="@createtest.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.createtest.FXMLCreateTestController">
    <children>
-      <Label id="createTestTitleLabel" layoutX="437.0" layoutY="21.0" text="Skapa nytt test" />
+      <Label id="createTestTitleLabel" fx:id="lblCreateTestCourseName" alignment="CENTER" layoutX="170.0" layoutY="21.0" prefHeight="51.0" prefWidth="763.0" text="Skapa nytt test" />
       <VBox layoutX="112.0" layoutY="83.0">
          <children>
             <Label text="Namn" />
@@ -60,6 +60,11 @@
                <VBox.margin>
                   <Insets top="5.0" />
                </VBox.margin></RadioButton>
+            <Label fx:id="lblLeftWarning">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </Label>
             <HBox>
                <children>
                   <Button id="createTestButton" fx:id="btnPreviewTest" alignment="CENTER" mnemonicParsing="false" onAction="#previewTest" prefWidth="150.0" text="Granska testet" />
@@ -67,7 +72,7 @@
                   <Button id="createTestButton" fx:id="btnSaveTest" alignment="CENTER" mnemonicParsing="false" onAction="#saveTestToDb" prefWidth="150.0" text="Spara testet" />
                </children>
                <VBox.margin>
-                  <Insets top="40.0" />
+                  <Insets top="10.0" />
                </VBox.margin>
             </HBox>
          </children>
@@ -86,6 +91,11 @@
                   <Insets top="20.0" />
                </VBox.margin></Label>
             <VBox fx:id="vBoxAnswerAltenatives" spacing="10.0" />
+            <Label fx:id="lblRightWarning">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Label>
             <VBox alignment="CENTER_RIGHT" spacing="20.0">
                <children>
                   <HBox>
@@ -101,7 +111,7 @@
                   </HBox>
                </children>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="10.0" />
                </VBox.margin>
             </VBox>
          </children>
