--- a/src/testverktygfrontend/createTest/previewTest/FXMLPreviewTest.fxml
+++ b/src/testverktygfrontend/createTest/previewTest/FXMLPreviewTest.fxml
@@ -9,7 +9,7 @@
 <AnchorPane id="AnchorPane" prefHeight="609.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #ff7f50, #10374b);" stylesheets="@previewtest.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.createtest.previewtest.FXMLPreviewTestController">
    <children>
       <Label id="previewTestTitleLabel" fx:id="lblTestName" alignment="CENTER" layoutX="128.0" layoutY="14.0" prefHeight="51.0" prefWidth="340.0" text="Testet" />
-      <ScrollPane id="scrollPane" fx:id="scrollPaneQandA" hbarPolicy="NEVER" layoutX="-2.0" layoutY="65.0" prefHeight="455.0" prefWidth="600.0" vbarPolicy="ALWAYS">
+      <ScrollPane id="scrollPane" fx:id="scrollPaneQandA" hbarPolicy="NEVER" layoutX="-2.0" layoutY="65.0" prefHeight="455.0" prefWidth="600.0">
         <content>
           <AnchorPane fx:id="QandAContainer" prefHeight="60.0" prefWidth="600.0">
                <children>
