--- a/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
+++ b/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
@@ -36,19 +36,20 @@
       <Button layoutX="517.0" layoutY="402.0" mnemonicParsing="false" text="Skicka in" visible="false" />
       <Label fx:id="arrowLeft" layoutX="424.0" layoutY="366.0" prefHeight="27.0" prefWidth="73.0" text="Label" visible="false" />
       <Label fx:id="arrowRight" blendMode="SRC_ATOP" layoutX="517.0" layoutY="366.0" prefHeight="27.0" prefWidth="73.0" text="Label" visible="false" />
-      <ImageView blendMode="SRC_ATOP" fitHeight="35.0" fitWidth="56.0" layoutX="461.0" layoutY="358.0" nodeOrientation="INHERIT" onMouseClicked="#backward" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="left" blendMode="SRC_ATOP" fitHeight="35.0" fitWidth="56.0" layoutX="461.0" layoutY="358.0" nodeOrientation="INHERIT" onMouseClicked="#backward" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@arrowLeft.png" />
          </image></ImageView>
-      <ImageView fitHeight="35.0" fitWidth="52.0" layoutX="518.0" layoutY="358.0" onMouseClicked="#forward" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="right" fitHeight="35.0" fitWidth="52.0" layoutX="518.0" layoutY="358.0" onMouseClicked="#forward" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@arrowRight.png" />
          </image></ImageView>
-      <Label fx:id="countDownLabel" layoutX="497.0" layoutY="21.0" prefHeight="27.0" prefWidth="73.0" text="Label">
+      <Label fx:id="countDownLabel" layoutX="267.0" layoutY="18.0" prefHeight="27.0" prefWidth="286.0" text="Label">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
       <VBox fx:id="vbox" layoutX="31.0" layoutY="127.0" />
+      <Button fx:id="quittest" layoutX="214.0" layoutY="331.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
