--- a/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
+++ b/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -9,20 +15,35 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.doingTest.FXMLDoingTestController">
+<AnchorPane id="AnchorPane" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.doingTest.FXMLDoingTestController">
    <children>
+      <HBox prefHeight="87.0" prefWidth="600.0" style="-fx-background-color: #ea6b4f;">
+         <children>
+            <Label prefHeight="35.0" prefWidth="315.0" text="&quot;Namnet på provet&quot;" textFill="#dad5f3">
+               <font>
+                  <Font name="Josefin Sans Light" size="28.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="10.0" top="20.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="countDownLabel" prefHeight="27.0" prefWidth="144.0" text="Label" textFill="#dad5f3">
+               <font>
+                  <Font name="Josefin Sans Bold" size="15.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="100.0" top="30.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
       <ImageView fitHeight="201.0" fitWidth="200.0" layoutX="360.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="243.0" text="&quot;Namnet på provet&quot;">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="31.0" layoutY="90.0" prefHeight="35.0" prefWidth="115.0" text="Fråga?">
+      <Label layoutX="31.0" layoutY="93.0" prefHeight="35.0" prefWidth="115.0" text="Fråga?">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Separator layoutX="14.0" layoutY="124.0" prefWidth="200.0" />
+      <Separator layoutX="14.0" layoutY="127.0" prefWidth="200.0" />
       <Pane layoutX="14.0" layoutY="138.0" prefHeight="200.0" prefWidth="200.0" />
       <Label layoutX="472.0" layoutY="94.0" prefHeight="28.0" prefWidth="92.0" text="2 av 5">
          <font>
@@ -40,10 +61,5 @@
          <image>
             <Image url="@arrowRight.png" />
          </image></ImageView>
-      <Label fx:id="countDownLabel" layoutX="497.0" layoutY="21.0" prefHeight="27.0" prefWidth="73.0" text="Label">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
    </children>
 </AnchorPane>
