--- a/src/testverktygfrontend/doingTest/FXMLShowTestResult.fxml
+++ b/src/testverktygfrontend/doingTest/FXMLShowTestResult.fxml
@@ -27,9 +27,8 @@
             </StackPane>
          </children>
       </VBox>
-      <Label fx:id="show" layoutX="146.0" layoutY="272.0" prefHeight="63.0" prefWidth="298.0" />
-      <Button fx:id="myPage" layoutX="513.0" layoutY="580.0" mnemonicParsing="false" onAction="#goToMyPage" stylesheets="@newCascadeTestResult.css" text="min sida" AnchorPane.topAnchor="580.0" />
-      <ScrollPane fx:id="scroll" layoutX="17.0" layoutY="315.0" prefHeight="257.0" prefWidth="604.0" stylesheets="@newCascadeTestResult.css" visible="false" AnchorPane.topAnchor="315.0">
+      <Button fx:id="myPage" layoutX="513.0" layoutY="595.0" mnemonicParsing="false" onAction="#goToMyPage" stylesheets="@newCascadeTestResult.css" text="min sida" AnchorPane.topAnchor="595.0" />
+      <ScrollPane fx:id="scroll" layoutX="17.0" layoutY="330.0" prefHeight="257.0" prefWidth="604.0" stylesheets="@newCascadeTestResult.css" visible="false" AnchorPane.topAnchor="330.0">
          <content>
             <VBox fx:id="vBox" prefHeight="321.0" prefWidth="530.0">
                <padding>
@@ -41,9 +40,9 @@
       <HBox fx:id="topHBox" layoutY="-1.0" prefHeight="77.0" prefWidth="622.0" stylesheets="@../studentPage/newCascadeStyleSheet.css">
          <children>
             <Label fx:id="userLabelImg" prefHeight="75.0" prefWidth="111.0" />
-            <GridPane prefHeight="88.0" prefWidth="574.0">
+            <GridPane prefHeight="77.0" prefWidth="329.0">
                <children>
-                  <Label fx:id="profileLabel" prefHeight="36.0" prefWidth="77.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
+                  <Label fx:id="profileLabel" prefHeight="34.0" prefWidth="166.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
@@ -56,12 +55,9 @@
                         <Insets top="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label fx:id="userName" prefHeight="17.0" prefWidth="199.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="97.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="361.0" minWidth="10.0" prefWidth="199.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="238.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="10.0" prefWidth="200.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -69,9 +65,17 @@
                   <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
                </rowConstraints>
             </GridPane>
+            <Label text=" Resultat sida" textFill="#fa5837">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="70.0" top="30.0" />
+               </HBox.margin>
+            </Label>
          </children>
       </HBox>
-      <VBox fx:id="resultBox" layoutX="24.0" layoutY="228.0" prefHeight="77.0" prefWidth="477.0" visible="false">
+      <VBox fx:id="resultBox" layoutX="17.0" layoutY="219.0" prefHeight="80.0" prefWidth="346.0" visible="false">
          <children>
             <HBox prefHeight="23.0" prefWidth="475.0">
                <children>
@@ -113,5 +117,90 @@
             </HBox>
          </children>
       </VBox>
+      <VBox layoutX="463.0" layoutY="226.0" prefHeight="80.0" prefWidth="147.0" style="-fx-border-color: #f46e42;">
+         <children>
+            <Label text="Betyg krav:" textFill="#f46e42">
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <HBox prefHeight="27.0" prefWidth="186.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="113.0" text="0%-49%">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+                  <Label text="IG">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </HBox>
+            <HBox prefHeight="27.0" prefWidth="186.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="115.0" text="50%-69%">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+                  <Label text="G">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </HBox>
+            <HBox prefHeight="27.0" prefWidth="186.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="112.0" text="70%-79%">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+                  <Label text="VG">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </HBox>
+            <HBox prefHeight="27.0" prefWidth="186.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="111.0" text="80%-100%">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+                  <Label text="MVG">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </HBox>
+         </children>
+      </VBox>
+      <Label fx:id="labelAboveScroll" layoutX="17.0" layoutY="309.0" prefHeight="17.0" prefWidth="266.0" text="Nedan hittar du vad du har svarat på testet" visible="false">
+         <font>
+            <Font name="QuicksandBook-Regular" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
