--- a/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
+++ b/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
@@ -16,20 +16,22 @@
          <top>
             <HBox fx:id="topHBox" prefHeight="77.0" prefWidth="612.0" stylesheets="@newCascadeStyleSheet.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="userLabelImg" prefHeight="75.0" prefWidth="111.0" />
-                  <GridPane prefHeight="88.0" prefWidth="574.0">
+                  <Label fx:id="userLabelImg" prefHeight="75.0" prefWidth="74.0">
+                     <HBox.margin>
+                        <Insets left="40.0" />
+                     </HBox.margin></Label>
+                  <GridPane prefHeight="79.0" prefWidth="488.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="97.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="361.0" minWidth="10.0" prefWidth="199.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="238.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="10.0" prefWidth="397.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="1.0" prefWidth="30.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="47.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label fx:id="profileLabel" prefHeight="36.0" prefWidth="77.0" stylesheets="@newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
+                        <Label fx:id="profileLabel" prefHeight="34.0" prefWidth="161.0" stylesheets="@newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" />
                            </GridPane.margin>
@@ -42,7 +44,13 @@
                               <Font name="Avenir Book" size="21.0" />
                            </font>
                         </Label>
-                        <Label fx:id="userName" prefHeight="17.0" prefWidth="199.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label prefHeight="19.0" prefWidth="34.0" text="Hem" textFill="#fa5837" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets bottom="25.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font></Label>
                      </children>
                   </GridPane>
                </children>
