--- a/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
+++ b/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
@@ -18,7 +18,7 @@
    <children>
       <HBox prefHeight="87.0" prefWidth="600.0" style="-fx-background-color: #ea6b4f;">
          <children>
-            <Label prefHeight="35.0" prefWidth="315.0" text="&quot;Namnet på provet&quot;" textFill="#dad5f3">
+            <Label fx:id="nameOnTest" prefHeight="35.0" prefWidth="315.0" text="&quot;Namnet på provet&quot;" textFill="#dad5f3">
                <font>
                   <Font name="Josefin Sans Light" size="28.0" />
                </font>
@@ -34,12 +34,7 @@
             </Label>
          </children>
       </HBox>
-      <ImageView fitHeight="201.0" fitWidth="200.0" layoutX="360.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="nameOnTest" layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="243.0" text="&quot;Namnet på provet&quot;">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
+      <ImageView fx:id="questionImage" fitHeight="201.0" fitWidth="200.0" layoutX="360.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="label" layoutX="31.0" layoutY="90.0" text="Fråga?">
          <font>
             <Font size="18.0" />
@@ -62,11 +57,6 @@
          <image>
             <Image url="@arrowRight.png" />
          </image></ImageView>
-      <Label fx:id="countDownLabel" layoutX="267.0" layoutY="18.0" prefHeight="27.0" prefWidth="286.0" text="Label">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
       <VBox fx:id="vbox" layoutX="31.0" layoutY="127.0" />
       <Button fx:id="quittest" layoutX="214.0" layoutY="331.0" mnemonicParsing="false" text="Button" />
    </children>
