--- a/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
+++ b/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -14,35 +15,37 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.doingTest.FXMLDoingTestController">
+<AnchorPane id="AnchorPane" prefHeight="443.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.doingTest.FXMLDoingTestController">
    <children>
       <HBox prefHeight="87.0" prefWidth="600.0" style="-fx-background-color: #ea6b4f;">
          <children>
-            <Label prefHeight="35.0" prefWidth="315.0" text="&quot;Namnet på provet&quot;" textFill="#dad5f3">
-               <font>
-                  <Font name="Josefin Sans Light" size="28.0" />
-               </font>
+            <VBox alignment="CENTER" prefHeight="87.0" prefWidth="147.0">
                <HBox.margin>
+                  <Insets left="430.0" />
                </HBox.margin>
-            </Label>
-            <Label fx:id="countDownLabel" prefHeight="27.0" prefWidth="144.0" text="Label" textFill="#dad5f3">
-               <font>
-                  <Font name="Josefin Sans Bold" size="15.0" />
-               </font>
-               <HBox.margin>
-               </HBox.margin>
-            </Label>
+               <children>
+                  <Label fx:id="clockImg" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="53.0" stylesheets="@newCascadeTestResult.css" />
+                  <Label fx:id="countDownLabel" alignment="CENTER" prefHeight="27.0" prefWidth="151.0" text="Label" textFill="#f9eeff">
+                     <font>
+                        <Font name="Josefin Sans Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
          </children>
       </HBox>
       <ImageView fitHeight="201.0" fitWidth="200.0" layoutX="360.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="nameOnTest" layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="243.0" text="&quot;Namnet på provet&quot;">
+      <Label fx:id="nameOnTest" layoutX="14.0" layoutY="23.0" prefHeight="35.0" prefWidth="243.0" text="&quot;Namnet på provet&quot;" textFill="#f9eeff">
          <font>
-            <Font size="24.0" />
+            <Font name="Josefin Sans Light" size="26.0" />
          </font>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
       </Label>
-      <Label fx:id="label" layoutX="31.0" layoutY="90.0" text="Fråga?">
+      <Label fx:id="label" layoutX="16.0" layoutY="96.0" text="Fråga?">
          <font>
-            <Font size="18.0" />
+            <Font name="System Italic" size="16.0" />
          </font>
       </Label>
       <Separator layoutX="14.0" layoutY="124.0" prefWidth="200.0" />
@@ -62,12 +65,12 @@
          <image>
             <Image url="@arrowRight.png" />
          </image></ImageView>
-      <Label fx:id="countDownLabel" layoutX="267.0" layoutY="18.0" prefHeight="27.0" prefWidth="286.0" text="Label">
+      <VBox fx:id="vbox" layoutX="31.0" layoutY="140.0" prefHeight="177.0" prefWidth="193.0" />
+      <Button fx:id="quittest" layoutX="214.0" layoutY="331.0" mnemonicParsing="false" stylesheets="@newCascadeTestResult.css" text="Button" />
+      <Label layoutX="15.0" layoutY="12.0" text="Prov i ämnet" textFill="WHITE">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <VBox fx:id="vbox" layoutX="31.0" layoutY="127.0" />
-      <Button fx:id="quittest" layoutX="214.0" layoutY="331.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
