--- a/src/testverktygfrontend/doingTest/newCascadeTestResult.css
+++ b/src/testverktygfrontend/doingTest/newCascadeTestResult.css
@@ -31,6 +31,22 @@ and open the template in the editor.
      -fx-cursor: hand;
 }
 
+#quittest{
+    -fx-background-color: #0f3340;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-background-radius:0;
+     -fx-cursor: hand;
+}
+
+#quittest:hover{
+    -fx-background-color: #0d303d;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-background-radius:0;
+     -fx-cursor: hand;
+}
+
 #myPage{
     -fx-background-color:none;
     -fx-border-color: #c15840;
@@ -168,4 +184,11 @@ and open the template in the editor.
     -fx-text-fill: #e74a43;
    -fx-font-family:"Josefin sans";
    -fx-font-size: 20px; 
+}
+
+#clockImg{
+    -fx-background-image: url("clock-icon.png");
+     -fx-background-size: 50 50;
+    -fx-background-repeat: no-repeat;
+      -fx-background-position: center;
 }
