--- a/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
+++ b/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" style="-fx-background-color: #f7f7f7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.FXMLStudentPageController">
+<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.FXMLStudentPageController">
    <children>
       <BorderPane layoutX="152.0" layoutY="137.0" prefHeight="589.0" prefWidth="504.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -20,10 +20,9 @@
                      <HBox.margin>
                         <Insets left="40.0" />
                      </HBox.margin></Label>
-                  <GridPane prefHeight="79.0" prefWidth="488.0">
+                  <GridPane prefHeight="77.0" prefWidth="376.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="10.0" prefWidth="397.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="1.0" prefWidth="30.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
@@ -33,7 +32,7 @@
                      <children>
                         <Label fx:id="profileLabel" prefHeight="34.0" prefWidth="161.0" stylesheets="@newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
                            <GridPane.margin>
-                              <Insets left="10.0" />
+                              <Insets />
                            </GridPane.margin>
                         </Label>
                         <Label fx:id="studentLabel" text="STUDENT">
@@ -44,15 +43,21 @@
                               <Font name="Avenir Book" size="21.0" />
                            </font>
                         </Label>
-                        <Label prefHeight="19.0" prefWidth="34.0" text="Hem" textFill="#fa5837" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets bottom="25.0" />
-                           </GridPane.margin>
-                           <font>
-                              <Font name="System Bold" size="13.0" />
-                           </font></Label>
                      </children>
                   </GridPane>
+                  <HBox prefHeight="77.0" prefWidth="101.0">
+                     <children>
+                        <Line endY="30.0" startY="-42.0" stroke="#e74a43" style="-fx-stroke-width: 2;" />
+                        <Label prefHeight="19.0" prefWidth="82.0" text="Hem" textFill="#fa5837">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="20.0" top="30.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
             </HBox>
          </top>
