massor av buggar

--- a/src/testverktygfrontend/teacherPage/FXMLTeacher.fxml
+++ b/src/testverktygfrontend/teacherPage/FXMLTeacher.fxml
@@ -87,7 +87,7 @@
                                  <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
-                                          <ListView fx:id="testNotDoneList" layoutY="25.0" onMouseClicked="#getTest" prefHeight="121.0" prefWidth="242.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                          <ListView fx:id="testNotDoneList" layoutY="25.0" onMouseClicked="#getTestUndone" prefHeight="121.0" prefWidth="242.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                        </children>
                                     </AnchorPane>
                                  </content>
