--- a/src/testverktygfrontend/teacherPage/FXMLShowStudentResult.fxml
+++ b/src/testverktygfrontend/teacherPage/FXMLShowStudentResult.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.teacherPage.FXMLShowStudentResultController">
+<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.teacherPage.FXMLShowStudentResultController">
 
    <children>
       <VBox fx:id="vBoxTop" alignment="CENTER" layoutY="76.0" prefHeight="146.0" prefWidth="622.0" style="-fx-background-color: #ea6b4f;" stylesheets="@CascadeStudentResult.css">
@@ -26,7 +28,7 @@
          </children>
       </VBox>
       <Label fx:id="show" layoutX="146.0" layoutY="272.0" prefHeight="63.0" prefWidth="298.0" />
-      <Button fx:id="myPage" layoutX="518.0" layoutY="587.0" mnemonicParsing="false" onAction="#goBack" stylesheets="@CascadeStudentResult.css" text="min sida" AnchorPane.topAnchor="587.0" />
+      <Button fx:id="myPage" layoutX="518.0" layoutY="587.0" mnemonicParsing="false" onAction="#goBack" stylesheets="@CascadeStudentResult.css" text="stäng" AnchorPane.topAnchor="587.0" />
       <ScrollPane fx:id="scroll" layoutX="17.0" layoutY="324.0" prefHeight="257.0" prefWidth="604.0" stylesheets="@CascadeStudentResult.css" AnchorPane.topAnchor="324.0">
          <content>
             <VBox fx:id="vBox" prefHeight="256.0" prefWidth="530.0" stylesheets="@CascadeStudentResult.css">
@@ -80,20 +82,20 @@
       </VBox>
       <HBox fx:id="topHBox" alignment="CENTER" prefHeight="77.0" prefWidth="622.0" spacing="10.0" stylesheets="@../studentPage/newCascadeStyleSheet.css">
          <children>
-            <Region prefHeight="84.0" prefWidth="14.0" />
+            <Region prefHeight="77.0" prefWidth="0.0" />
             <Label fx:id="userLabelImg" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="50.0">
                <HBox.margin>
-                  <Insets left="5.0" right="5.0" />
+                  <Insets left="20.0" right="5.0" />
                </HBox.margin>
             </Label>
-            <VBox alignment="CENTER" prefHeight="77.0" prefWidth="103.0">
+            <VBox alignment="CENTER_LEFT" maxWidth="193.0" minWidth="193.0" prefHeight="77.0" prefWidth="193.0">
                <children>
                   <Label fx:id="studentLabel" text="LÄRARE">
                      <font>
                         <Font name="Avenir Book" size="21.0" />
                      </font>
                   </Label>
-                  <Label fx:id="profileLabel" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " />
+                  <Label fx:id="profileLabel" prefWidth="76.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " />
                </children>
             </VBox>
             <Region prefHeight="59.0" prefWidth="199.0" />
